# DataDriven_Policy

./: .gitignore  README.md  neural_network_vehicle_controller_design.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/data/: dataset.yaml  normalization.yaml  simulation_generation.yaml
configs/deployment/: runtime.yaml  safety_limits.yaml
configs/model/: direct_mlp_controller.yaml  gru_controller.yaml  mlp_controller.yaml
configs/training/: closed_loop.yaml  imitation.yaml
configs/vehicle/: actuator_limits.yaml  vehicle_params.yaml
docs/: project_structure.md  training_losses.md
docs/diagrams/: README.md  direct_mlp_controller_structure.drawio  gru_controller_structure.drawio  mlp_controller_structure.drawio  vehicle_controller_neural_network_architecture.drawio  vehicle_controller_project_architecture.drawio
examples/: _bootstrap.py  minimal_inference.py  sample_input.json  sample_scenario.yaml
scripts/: _bootstrap.py  benchmark_runtime.py  build_features_from_raw_data.py  compute_normalization.py  evaluate_closed_loop.py  evaluate_offline.py  export_model.py  extract_task_raw_data.py  generate_training_data.py  pickle_to_text.py  plot_reference_trajectories.py  plot_training_npz_physical_summary.py  prepare_dataset.py  replay_controller.py  train_closed_loop.py  train_imitation.py  train_imitation_from_raw_data.py  train_validate_from_features.py  validate_supervised_controller.py
src/vehicle_controller/: __init__.py  constants.py  factory.py  plotting.py  types.py  units.py
tests/integration/: test_controller_pipeline.py  (+3 more)
(+100 files in other folders)
